--- a/style.css
+++ b/style.css
@@ -23,21 +23,21 @@ body{
 }
 .logo{
     width: 60%;
+    height: 10vh;
     margin-left: 90px;
   
 }
 
-a{
+.menu a{
     margin-right: 90px;
     font-size: 25px;
     color: azure;
     text-decoration: none;
 }
-a:hover{
+.menu a:hover{
   color:black;
 }
-/* --------------- */
-/* ----------------- */
+/* ---------------- */
 .text-area{
     width: 100%;
     height: 100vh;
@@ -81,6 +81,7 @@ margin-bottom: 90px;
 /* ----------------- */
 .container{
     display: flex;
+  
     
 }
 .img-area{
@@ -88,18 +89,17 @@ margin-bottom: 90px;
 }
 .form-area{
 margin: 0 30px;
-height: 60vh;
+width: 50%;
+height: 90vh;
 
     
     background-color:aliceblue;
 }
 .form-main-area{
 padding-left: 50px;
+margin-bottom: 65px;
 }
-.form-1{
-    display: flex;
-   
-}
+
 .text{
     color: indigo;
     font-size: 25px;
@@ -107,21 +107,35 @@ padding-left: 50px;
     font-weight: bold;
     
 }
-.form-2{
-    display: flex;
+.form-select{
+    padding: 10px 11px;
+    border-radius: 10px;
 }
+.input-area-date{
+    margin-right: 20px;
+    padding: 10px 11px;
+    border-radius: 10px;
+}
+
 .input-text{
-    
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
 }
 .input-area{
     padding: 10px 30px;
     border-radius: 10px;
+  
 }
-.button-area{
 
+.button-area{
+    padding: 15px 35px;
+    margin-left: 150px;
+
+ 
     background-color: blue;
-    color: black;
-  border-radius: 15px;
+    color: white;
+    border-radius: 15px;
 }
 /* ------------------ */
 .second-area{
@@ -156,7 +170,7 @@ padding-left: 50px;
 }
 .last-area{
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     margin-top: 60px;
 
 
@@ -171,4 +185,71 @@ padding-left: 50px;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     margin-top: 25px;
+}
+/* footer-area start */
+.footer-container{
+    width: 100%;
+    height: 50vh;
+    box-sizing: border-box;
+    background-color:black;
+}
+.footer{
+    display: grid;
+    grid-template-columns: repeat(4 ,1fr);
+    gap: 20px;
+   padding-top: 50px;
+   margin-left: 70px;
+ 
+}
+h2{
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: sans-serif;
+
+
+}
+.footer-1 {
+    display: grid;
+    grid-template-columns: repeat(auto);
+    gap: 20px;
+ 
+}
+.footer-2 {
+    display: grid;
+    grid-template-columns: repeat(auto);
+    gap: 20px;
+ 
+}
+.footer-3 {
+    display: grid;
+    grid-template-columns: repeat(auto);
+    gap: 20px;
+}
+a{
+    color:white;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: sans-serif;
+
+}
+
+
+
+.footer-input{
+    
+margin-right: 30px;
+    margin-top: 90px;
+    padding: 7px 10px;
+    border-radius: 10px;
+}
+.Submit-button{
+    color: white;
+    background-color:green;
+    border-radius: 10px;
+    padding: 7px 10px;
+}
+.Submit-button:hover{
+    background-color: blue;
 }
